[tool.poetry]
name = "python-gravwell-kismet-ingester"
version = "0.1.0"
description = ""
authors = ["hobobandy <30026704+hobobandy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
