[tool.poetry]
name = "python-gravwell-kismet-ingester"
version = "2023.11-dev1"
description = ""
authors = ["hobobandy <30026704+hobobandy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.0"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
